--- a/.classpath
+++ b/.classpath
@@ -2,12 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="D:/Program Files/processing-2.2.1/core/library/core.jar"/>
-	<classpathentry kind="lib" path="D:/Program Files/processing-2.2.1/modes/java/libraries/minim/library/jl1.0.jar"/>
-	<classpathentry kind="lib" path="D:/Program Files/processing-2.2.1/modes/java/libraries/minim/library/jsminim.jar"/>
-	<classpathentry kind="lib" path="D:/Program Files/processing-2.2.1/modes/java/libraries/minim/library/minim.jar"/>
-	<classpathentry kind="lib" path="D:/Program Files/processing-2.2.1/modes/java/libraries/minim/library/mp3spi1.9.4.jar"/>
-	<classpathentry kind="lib" path="D:/Program Files/processing-2.2.1/modes/java/libraries/minim/library/tritonus_aos.jar"/>
-	<classpathentry kind="lib" path="D:/Program Files/processing-2.2.1/modes/java/libraries/minim/library/tritonus_share.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/Downloads/processing-2.2.1-windows64/processing-2.2.1/modes/java/libraries/minim/library/jl1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/Downloads/processing-2.2.1-windows64/processing-2.2.1/modes/java/libraries/minim/library/jsminim.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/Downloads/processing-2.2.1-windows64/processing-2.2.1/modes/java/libraries/minim/library/minim.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/Downloads/processing-2.2.1-windows64/processing-2.2.1/modes/java/libraries/minim/library/mp3spi1.9.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/Downloads/processing-2.2.1-windows64/processing-2.2.1/modes/java/libraries/minim/library/tritonus_aos.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/Downloads/processing-2.2.1-windows64/processing-2.2.1/modes/java/libraries/minim/library/tritonus_share.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/Downloads/processing-2.2.1-windows64/processing-2.2.1/core/library/core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
